--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -148,11 +148,10 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link article-link" style="text-decoration: underline;
-                        color: rgb(255, 165, 62);" href="{% url 'articles' %}">Job Articles</a>
+                        <a class="nav-link article-link" href="{% url 'articles' %}">Job Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="color: rgb(253, 135, 0);" href="{% url 'flames' %}">Summer Training🔥</a>
+                        <a class="nav-link" style="text-decoration: underline; color: rgb(253, 135, 0);" href="{% url 'flames' %}">Summer Training🔥</a>
                     </li>
                     <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
