--- a/templates/student/flames/course_detail.html
+++ b/templates/student/flames/course_detail.html
@@ -378,7 +378,7 @@ active
     <div id="course-details" class="course-section">
         <h2 class="section-title">About This Program</h2>
         <div class="course-description">
-            {{ course.description|safe }}
+            {{ course.description|safe|linebreaks }}
         </div>
     </div>
 
