--- a/templates/student/flames/view_registration.html
+++ b/templates/student/flames/view_registration.html
@@ -288,7 +288,7 @@ active
                     <div class="row">
                         <div class="col-md-6 mb-4">
                             <h6>Description</h6>
-                            <p>{{ registration.course.description }}</p>
+                            <p>{{ registration.course.description|linebreaks }}</p>
                         </div>
                         <div class="col-md-6 mb-4">
                             <h6>What You Will Learn</h6>
