--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -462,7 +462,8 @@ Student -> Home
         <div class="card w-100">
             <div class="card-body p-4">
                 <div class="mb-4">
-                    <h5 class="card-title fw-semibold">Latest Schedule</h5>
+                    <h5 class="card-title fw-semibold">Summer Training Schedule
+                    </h5>
                 </div>
 
                 <ul class="timeline-widget mb-0 position-relative mb-n3">
