--- a/demo_static/css/accounts/login.css
+++ b/demo_static/css/accounts/login.css
@@ -1,6 +1,6 @@
 /* login.css */
 body {
-    background: url('../../img/accounts/background.png') no-repeat center center fixed;
+    background: url('../../img/accounts/login2.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 .overlay {
@@ -9,7 +9,7 @@ body {
     left: 0;
     width: 100%;
     height: 110%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.648);
     z-index: -1;
 }
 
