--- a/templates/student/ai_doubt_solver.html
+++ b/templates/student/ai_doubt_solver.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Student -> ASK ME🙋‍♂️
+Samadhaan AI | Ask Me🙋‍♂️
 {% endblock %}
 
 {% block extra_css %}
@@ -79,7 +79,7 @@ Student -> ASK ME🙋‍♂️
                         placeholder="Answer will be here..." disabled></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+                <button type="submit" class="btn btn-primary" id="submitBtn">Ask</button>
             </form>
         </div>
     </div>
