updated few more changes

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -428,7 +428,9 @@
                             <button id="theme-toggle" class="btn mx-2">Light Mode</button>
 
 
-                            <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+                            <a href="{% url 'logout' %}" class="btn btn-outline-danger ">
+                                <i class="ti ti-logout"></i>
+                            </a>
                             <li class="nav-item dropdown">
                                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2"
                                     data-bs-toggle="dropdown" aria-expanded="false">
