--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -150,7 +150,7 @@ Administration -> Home
                 <div class="col-lg-12">
                     <div class="card overflow-hidden">
                         <div class="card-body p-4">
-                            <h5 class="card-title mb-9 fw-semibold">Total Sessions🏛️</h5>
+                            <h5 class="card-title mb-9 fw-semibold">Submissions Today 📩</h5>
                             <div class="row align-items-center">
                                 <div class="col-8">
                                     <h4 class="fw-semibold mb-3">
@@ -170,7 +170,7 @@ Administration -> Home
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-4">
+                                <!-- <div class="col-4">
                                     <div class="d-flex justify-content-center">
                                         <div class="progress-bar-container">
 
@@ -179,7 +179,7 @@ Administration -> Home
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
